[package]
name = "hermes-discoverability"
version = "0.1.0"
edition = "2024" 

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets", "palette"] }
libp2p = { version = "0.55.0", features = [ "dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux", "gossipsub", "websocket" , "request-response" , "kad", "serde"] }
crossterm = "0.29.0"
tokio = { version = "1.38", features = ["macros", "net", "rt", "signal", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.6", features = ["derive"] }
futures = "0.3"
futures-timer = "3.0" 
async-trait = "0.1" 

sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
 


[[bin]]
name = "dht" 
path = "src/dht.rs"

[[bin]] 
name = "dht_db"
path = "src/dht_db.rs"

[[bin]] 
name = "dht_db_old" 
path = "src/dht_db_old.rs"

[[bin]] 
name = "routing_table" 
path = "src/routing_table.rs" 

[[bin]] 
name = "try1" 
path = "src/try1.rs" 

